--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,8 +33,9 @@ services:
       - "8082:80"
     environment:
       spring.profiles.active: prod
-      spring.datasource.username: postgres
-      spring.datasource.password: secret
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
+      POSTGRES_SCHEMA: guess_number_game
     restart: unless-stopped
     depends_on:
       - postgres
